--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <link href="src/style.css" rel="stylesheet">
 </head>
 <body>
- <div id="stopwatch">00:00:00</div>
-<div class="buttons">
-    <button id="start" class="btn-start">Start</button>
-    <button id="stop" class="btn-stop">Stop</button>
-    <button id="reset" class="btn-reset">Reset</button>
-</div>
+    <!-- Stopwatch display -->
+    <div id="stopwatch">00:00:00</div>
 
+    <!-- Buttons for controlling the stopwatch -->
+    <div class="buttons">
+        <button id="start" class="btn-start">Start</button>
+        <button id="stop" class="btn-stop">Stop</button>
+        <button id="reset" class="btn-reset">Reset</button>
+    </div>
+
+    <!-- JavaScript file for stopwatch functionality -->
     <script src="src/script.js"></script>
 </body>
 </html>
