added h1 in index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch</title>
     <link href="src/style.css" rel="stylesheet">
 </head>
+
 <body>
+    <h1>Stopwatch</h1>
     <!-- Stopwatch display -->
     <div id="stopwatch">00:00:00</div>
 
@@ -20,4 +23,5 @@
     <!-- JavaScript file for stopwatch functionality -->
     <script src="src/script.js"></script>
 </body>
+
 </html>
