"Added" -- ms -- time now

--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 
 <body>
     <h1>Stopwatch</h1>
+    <p>Time Now: <span id="timeNow">00:00:00</span></p>
     <!-- Stopwatch display -->
-    <div id="stopwatch">00:00:00</div>
-
+    <div id="stopwatch">00:00:00:00</div>
     <!-- Buttons for controlling the stopwatch -->
     <div class="buttons">
         <button id="start" class="btn-start">Start</button>
         <button id="stop" class="btn-stop">Stop</button>
         <button id="reset" class="btn-reset">Reset</button>
     </div>
-
     <!-- JavaScript file for stopwatch functionality -->
     <script src="src/script.js"></script>
 </body>
